--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,6 @@ body {
     font-size: 20px;
 }
 
-/* footer styles */
 
 
 
@@ -87,6 +86,11 @@ main {
     margin-top: 200px;
 }
 
+.failure-reason{
+
+    width: 30%;
+}
+
 .failure-description {
 
 
@@ -95,12 +99,10 @@ main {
     color: #444343;
 }
 
-.failure-reason-list li {
 
-    font-weight: 400;
-    font-size: 16px;
-    color: #444343;
-    margin: 10px 0;
+.checkmark{
+
+    color: green;
 }
 
 /* future plan section */
